--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ before_script:
   - 'npm install -g grunt-cli'
 
 after_success:
+  - "echo $FTP_USER"
   - "find . -type f -exec curl --verbose --ftp-create-dirs -T {} -u $FTP_USER:$FTP_PASS $FTP_HOST/howtoedithostsfile.com/ \\;"
  
