--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_script:
 
 after_success:
   - echo ${FTP_USER}
-  - find . -type f -exec curl --verbose --ftp-create-dirs -T {} -u ${FTP_USER}:${FTP_PASS} ${FTP_HOST}/howtoedithostsfile.com/ \\;
+  - find . -type f -exec curl --verbose --ftp-create-dirs -T {} -u ${FTP_USER}:${FTP_PASS} ${FTP_HOST}/howtoedithostsfile.com/ \;
  
