--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ language: node_js
 before_script:
   - 'npm install -g grunt-cli'
 
-after_success:
-  - echo ${FTP_USER}
-  - find . -type f -exec curl --verbose --ftp-create-dirs -T {} -u ${FTP_USER}:${FTP_PASS} ${FTP_HOST}/howtoedithostsfile.com/ \;
+#after_success:
+#  - find . -type f -exec curl --verbose --ftp-create-dirs -T {} -u ${FTP_USER}:${FTP_PASS} ${FTP_HOST}/howtoedithostsfile.com/ \;
  
